environments/istio/ambient-demo/uniform-apps/apps/5-namespace-app/ambient/l7-policy/tier-1-app-a-viewer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: tier-1-app-a-viewer
 namespace: ns-1
spec:
 selector:
   matchLabels:
     istio.io/gateway-name: waypoint
 action: ALLOW
 rules:
 - from:
   - source:
       principals:
       - cluster.local/ns/client/sa/sleepz
       - cluster.local/ns/ns-1/sa/vegeta
       - cluster.local/ns/ns-2/sa/vegeta
       - cluster.local/ns/ns-3/sa/vegeta
       - cluster.local/ns/ns-4/sa/vegeta
       - cluster.local/ns/ns-5/sa/vegeta
       - cluster.local/ns/ns-6/sa/vegeta
       - cluster.local/ns/ns-7/sa/vegeta
       - cluster.local/ns/ns-8/sa/vegeta
       - cluster.local/ns/ns-9/sa/vegeta
       - cluster.local/ns/ns-10/sa/vegeta
       - cluster.local/ns/ns-11/sa/vegeta
       - cluster.local/ns/ns-12/sa/vegeta
       - cluster.local/ns/ns-13/sa/vegeta
       - cluster.local/ns/ns-14/sa/vegeta
       - cluster.local/ns/ns-15/sa/vegeta
       - cluster.local/ns/ns-16/sa/vegeta
       - cluster.local/ns/ns-17/sa/vegeta
       - cluster.local/ns/ns-18/sa/vegeta
       - cluster.local/ns/ns-19/sa/vegeta
       - cluster.local/ns/ns-20/sa/vegeta
       - cluster.local/ns/ns-21/sa/vegeta
       - cluster.local/ns/ns-22/sa/vegeta
       - cluster.local/ns/ns-23/sa/vegeta
       - cluster.local/ns/ns-24/sa/vegeta
       - cluster.local/ns/ns-25/sa/vegeta
       - cluster.local/ns/ns-26/sa/vegeta
       - cluster.local/ns/ns-27/sa/vegeta
       - cluster.local/ns/ns-28/sa/vegeta
       - cluster.local/ns/ns-29/sa/vegeta
       - cluster.local/ns/ns-30/sa/vegeta
       - cluster.local/ns/ns-31/sa/vegeta
       - cluster.local/ns/ns-32/sa/vegeta
       - cluster.local/ns/ns-33/sa/vegeta
       - cluster.local/ns/ns-34/sa/vegeta
       - cluster.local/ns/ns-35/sa/vegeta
       - cluster.local/ns/ns-36/sa/vegeta
       - cluster.local/ns/ns-37/sa/vegeta
       - cluster.local/ns/ns-38/sa/vegeta
       - cluster.local/ns/ns-39/sa/vegeta
       - cluster.local/ns/ns-40/sa/vegeta
       - cluster.local/ns/ns-41/sa/vegeta
       - cluster.local/ns/ns-42/sa/vegeta
       - cluster.local/ns/ns-43/sa/vegeta
       - cluster.local/ns/ns-44/sa/vegeta
       - cluster.local/ns/ns-45/sa/vegeta
       - cluster.local/ns/ns-46/sa/vegeta
       - cluster.local/ns/ns-47/sa/vegeta
       - cluster.local/ns/ns-48/sa/vegeta
       - cluster.local/ns/ns-49/sa/vegeta
       - cluster.local/ns/ns-50/sa/vegeta
   to:
   - operation:
       methods: ["GET"]
